[package]
name = "salvo-ruoyi-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = {version="0.44.0",features=["serve-static","oapi","logging","catch-panic"]}
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
anyhow = "1.0"