[package]
name = "salvo-ruoyi-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = {version="0.44.0",features=["serve-static","oapi","logging","catch-panic"]}
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
rbatis = { version = "4.3",features = ["debug_mode"]}
rbdc-mysql={version="4.3"}
anyhow = "1.0"
captcha = "0.0.9"
serde = {version="1",features=["derive"]}
serde_json = "1"
uuid = {version="1.3.2",features=[
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
validator = {version = "0.16.1", features = ["derive"]}
